--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <a href="mailto:mainnella@gmail.com" class="icon">
               <i class="fa-solid fa-envelope"></i>
             </a>
-            <a href="../MAInnella Resume.pdf" class="icon" target="_blank">
+            <a href="./MAInnella Resume.pdf" class="icon" target="_blank">
               <i class="fa-solid fa-file-pdf"></i>
             </a>
           </div>
