added library project and adjust some styling for different media queries

--- a/index.html
+++ b/index.html
@@ -117,20 +117,19 @@
               <div class="projects_wrapper">
                 <div class="project">
                   <img
-                    src="./Pictures/undraw_projects.svg"
+                    src="./Pictures/Library.svg"
                     class="projects_image"
                     alt="Empty Project Slot"
                   />
                   <div class="projects_description">
-                    <h4 class="projects_title">Project</h4>
+                    <h4 class="projects_title">Library</h4>
                     <p>
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                      Architecto, nam?
+                      Library e-commerce project, a format for potential retail.
                     </p>
-                    <h5 class="projects_subtitle">HTML, CSS</h5>
+                    <h5 class="projects_subtitle">HTML, CSS, JS</h5>
                     <div class="projects_links">
                       <a
-                        href="https://github.com/Mike-Innella"
+                        href="https://mike-innella.github.io/E-Commerce/"
                         class="icon"
                         target="_blank"
                       >
